Try a CRAZY EXPERIMENT

--- a/src/client/modules/.jshintrc
+++ b/src/client/modules/.jshintrc
@@ -1,5 +1,9 @@
 {
   "extends": "../../../.jshintrc",
   "browserify": true,
-  "browser": true
+  "browser": true,
+  "globals": {
+    "define": false,
+    "console": false
+  }
 }
