--- a/deploy/ansible/roles/services/templates/upstart.conf
+++ b/deploy/ansible/roles/services/templates/upstart.conf
@@ -18,9 +18,7 @@ setgid {{app_user}}
 env NODE_ENV={{node_env}}
 
 script
-  if [ $NODE_ENV = "development" ]; then
-    export DEBUG=*
-  fi
+  export DEBUG=*
 
-  /usr/bin/node {{app_base_path}} 2>&1 | logger -p local0.debug
+  /usr/bin/node {{app_base_path}} >> {{log_file}} 2>&1
 end script
