--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ampersand-router": "^1.0.6",
     "ampersand-state": "^4.4.1",
     "browserify-middleware": "^4.1.0",
+    "cookies-js": "^1.1.0",
     "debug": "^2.1.0",
     "express": "^4.10.4",
     "ractive": "^0.6.1",
