--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jscs": "^1.8.1",
     "jshint": "^2.5.10",
     "nest": "git+https://6f278b7cbc5d8c3ba8961945c677a7d1f53e2901:x-oauth-basic@github.com/bocoup/nest-cli.git",
+    "requirejs": "^2.1.15",
     "sinon": "^1.12.1"
   },
   "dependencies": {
