--- a/package.json
+++ b/package.json
@@ -30,11 +30,14 @@
     "body-parser": "^1.10.0",
     "browserify": "^8.0.2",
     "browserify-middleware": "^4.1.0",
+    "cookies": "^0.5.0",
+    "cookies-js": "^1.1.0",
     "debug": "^2.1.0",
     "envify": "^3.2.0",
     "express": "^4.10.4",
     "lodash.assign": "^2.4.1",
     "mocha": "^2.0.1",
+    "octonode": "^0.6.12",
     "ractive": "^0.6.1",
     "through": "^2.3.6"
   }
