--- a/package.json
+++ b/package.json
@@ -7,20 +7,24 @@
   "scripts": {
     "build": "browserify src/client/modules/main.js -t ./src/server/transforms/ractive -t ./src/server/transforms/css -t envify > app-production.js",
     "get-secrets": "nest get-secrets --prompt",
-    "lint": "jshint src test/unit",
+    "lint": "jshint src test/unit test/ui",
     "start": "node .",
     "style": "jscs src test/unit",
     "test": "npm run lint && npm run style && npm run test-unit",
     "test-unit": "mocha --require test/unit/setup.js --ui tdd --recursive test/unit/tests",
+    "test-ui": "mocha --ui bdd test/ui/setup test/ui/tests",
     "vagrant-restart-server": "vagrant ssh -c 'sudo service black-phoenix restart'",
     "vagrant-watch-log": "vagrant ssh -c 'sudo tail -F /var/log/blackphoenix.log'"
   },
   "devDependencies": {
+    "bluebird": "^2.5.3",
     "chai": "^1.10.0",
     "chai-datetime": "^1.3.1",
     "jscs": "^1.8.1",
     "jshint": "^2.5.10",
+    "leadfoot": "^1.2.1",
     "nest": "git+https://6f278b7cbc5d8c3ba8961945c677a7d1f53e2901:x-oauth-basic@github.com/bocoup/nest-cli.git",
+    "selenium-binaries": "^0.2.0",
     "sinon": "^1.12.1"
   },
   "dependencies": {
