--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   "scripts": {
     "build": "browserify src/client/modules/main.js -t ./src/server/transforms/ractive -t ./src/server/transforms/css -t envify > app-production.js",
     "get-secrets": "nest get-secrets --prompt",
-    "lint": "jshint src test/unit test/ui",
+    "lint": "jshint src test/unit test/ui test/mock-app test/mock-api",
     "start": "node .",
+    "start-api": "node test/mock-api",
+    "start-dev": "node test/mock-app",
     "style": "jscs src test/unit",
     "test": "npm run lint && npm run style && npm run test-unit",
     "test-unit": "mocha --require test/unit/setup.js --ui tdd --recursive test/unit/tests",
@@ -20,6 +22,8 @@
     "bluebird": "^2.5.3",
     "chai": "^1.10.0",
     "chai-datetime": "^1.3.1",
+    "cookies": "^0.5.0",
+    "cors": "^2.5.2",
     "jscs": "^1.8.1",
     "jshint": "^2.5.10",
     "leadfoot": "^1.2.1",
