--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint": "^2.5.10",
     "leadfoot": "^1.2.1",
     "nest": "git+https://6f278b7cbc5d8c3ba8961945c677a7d1f53e2901:x-oauth-basic@github.com/bocoup/nest-cli.git",
+    "path-to-regexp": "^1.0.2",
     "replay": "^1.12.0",
     "selenium-binaries": "^0.2.0",
     "sinon": "^1.12.1"
