--- a/deploy/ansible/roles/services/templates/upstart.conf
+++ b/deploy/ansible/roles/services/templates/upstart.conf
@@ -6,7 +6,7 @@
 # Manual start, stop, and restart respected.
 #
 
-description "Daemon for nodejs black-phoenix server"
+description "Daemon for nodejs weekly-review server"
 
 start on startup
 stop on shutdown
