--- a/deploy/ansible/roles/startup/tasks/main.yml
+++ b/deploy/ansible/roles/startup/tasks/main.yml
@@ -2,4 +2,4 @@
 # start it up.
 
 - name: Make sure the node app server is running
-  service: name=black-phoenix state=restarted
+  service: name=weekly-review state=restarted
