--- a/deploy/ansible/roles/services/tasks/main.yml
+++ b/deploy/ansible/roles/services/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # configure services
-- name: Make sure the black-phoenix daemon is on the box
-  template: src=upstart.conf dest=/etc/init/black-phoenix.conf backup=no
+- name: Make sure the weekly-review daemon is on the box
+  template: src=upstart.conf dest=/etc/init/weekly-review.conf backup=no
 
 - name: Create log file
   file: path={{log_file}} state=touch owner={{app_user}} group={{app_user}}
