--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,18 @@ language: node_js
 node_js:
   - "0.10"
   - 0.11
+# Start X Virtual Framebuffer so UI tests can run without a display
+# http://docs.travis-ci.com/user/gui-and-headless-browsers/
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+env:
+  - global:
+    - DISPLAY=':99.0'
+  - matrix:
+    - TEST_SCRIPT=test
+    - TEST_SCRIPT=test-ui
+script: npm run $TEST_SCRIPT
 matrix:
   fast_finish: true
   allow_failures:
